# mower

./: .gitignore  README.md
edge-control/: .coveragerc  Dockerfile  README.md  check.sh  copy.sh  gps.yaml  logging.yaml  mission.yaml  mypy.ini  pyproject.toml  robot.yaml  simulation.yaml  site.yaml  sync.sh
edge-control/config/: ublox.txt
edge-control/config/hagedag/: gps.yaml  logging.yaml  mission.yaml  robot.yaml  site.yaml
edge-control/config/hagekverna/: robot.yaml
edge-control/config/simulation/: mission.yaml
edge-control/config/sites/: hall.yaml
edge-control/edge_control/: api.py  config.py  mission.py  missioncontrol.py  missions.py  mqtt.py  robot.py  storage.py  tasks.py  topics.py
edge-control/edge_control/arch/: driver.py
edge-control/edge_control/camera/: logitech.py
edge-control/edge_control/control/: __init__.py  base.py  camera.py  controls.py  geometry.py
edge-control/edge_control/gps/: coordinates.py  driver.py  messages.py  nmea_driver.py  ntrip.py  site.py  status.py  ubx.py  ubx_driver.py
edge-control/edge_control/map/: geojson.py  geometry.py
edge-control/edge_control/models/: cdf.py  messages.py  ptz.py  state.py  tracking.py  turtle.py
edge-control/edge_control/realsense/: T265.py  depth.py  driver.py  driver1.py  driver2.py  driver3.py  obstacle.py  physical.py  status.py  tags.py
edge-control/edge_control/util/: PID.py  binmsg.py  config.py  (+10 more)
edge-control/tests/: camera.py  control.py  nmea.py  plotting.py  servo.py  simulation.py  test_config.py  test_coordinates.py  test_robot.py  test_site.py  test_turtle.py
(+44 files in other folders)
